force-app/main/default/objects/Order/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Invoiced Amount</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>