force-app/main/default/objects/Order/fields/Contract_New_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contract_New_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract New Lookup</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>