force-app/main/default/objects/Order/fields/Tipo_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Factura__c</fullName>
    <label>Tipo de Factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Factura</valueSetName>
    </valueSet>
</CustomField>